--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
-    "lodash": "^4.17.21"
+    "express": "^4.18.2",
+    "lodash": "^4.17.21",
+    "nodemon": "^3.0.1"
   },
   "devDependencies": {
     "eslint": "8.2.0",
@@ -9,5 +11,16 @@
     "eslint-plugin-import": "2.25.2",
     "eslint-plugin-prettier": "^5.0.1",
     "prettier": "^3.0.3"
-  }
+  },
+  "name": "web-development-project",
+  "version": "1.0.0",
+  "description": "A Practical part of Web Developmet and design subject's",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
+    "dev": "nodemon index.js"
+  },
+  "author": "Ismail Hossain James",
+  "license": "MIT"
 }
