--- a/package.json
+++ b/package.json
@@ -1,26 +1,17 @@
 {
-  "dependencies": {
-    "express": "^4.18.2",
-    "lodash": "^4.17.21",
-    "nodemon": "^3.0.1"
-  },
-  "devDependencies": {
-    "eslint": "8.2.0",
-    "eslint-config-airbnb-base": "15.0.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-import": "2.25.2",
-    "eslint-plugin-prettier": "^5.0.1",
-    "prettier": "^3.0.3"
-  },
   "name": "web-development-project",
-  "version": "1.0.0",
-  "description": "A Practical part of Web Developmet and design subject's",
-  "main": "index.js",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node ./bin/www"
   },
-  "author": "Ismail Hossain James",
-  "license": "MIT"
+  "dependencies": {
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "express": "~4.16.1",
+    "express-async-handler": "^1.2.0",
+    "http-errors": "~1.6.3",
+    "jade": "~1.11.0",
+    "morgan": "~1.9.1"
+  }
 }
